refactor(test): clean up integration and utility tests
CustomerIntegrationTest:
- Add @AfterEach to close KafkaConsumer (fix resource leak)
- Extract filterEventsByType(records, type) helper — eliminates 4 repeated
  StreamSupport.stream(...).filter(...).collect(Collectors.toList()) blocks
- Remove commented-out .updatedAt() line from shouldCreateAndUpdateCustomer
- Replace deprecated URLEncoder.encode("UTF-8") with StandardCharsets.UTF_8
- Replace Collectors.toList() with .toList() (Java 21) and remove Collectors import

JsonUtilsFromJsonTest:
- Add class-level @DisplayName("JsonUtils.fromJson methods")
- Rename all 10 tests from testXxx_Scenario to shouldXxx + add @DisplayName
- Replace hand-rolled Person (public fields, manual equals/hashCode) with
  Lombok @Data @NoArgsConstructor @AllArgsConstructor
- Remove now-unused java.io.IOException import

JsonUtilsFileTest:
- Remove unused imports: mock and when (Mockito, never referenced in tests)

JsonUtilsIsJsonTest:
- Replace AssertionsForClassTypes with Assertions (consistent with rest of codebase)

ValidCurrencyTest:
- Replace wildcard import with explicit assertThat
- Fix 4-space indentation → 2-space (project standard)
- Convert shouldValidateCommonCurrencyCodes, shouldHandleCaseInsensitivity, and
  shouldHandleWhitespace from multi-instance verbose tests to @ParameterizedTest